--- a/JFPC.bib
+++ b/JFPC.bib
@@ -48,8 +48,7 @@ pages = "115--121"
 @inproceedings{Vilim2011,
   title={Timetable Edge Finding Filtering Algorithm for Discrete Cumulative Resources},
   author={Vil{\'i}m, Petr},
-  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 8th International Conference, CPAIOR 2011, Berlin, Germany, May 23-27, 2011. Proceedings",
-year="2011},
+  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 8th International Conference, CPAIOR 2011, Berlin, Germany, May 23-27, 2011. Proceedings},
   pages={230--245},
   year={2011},
   organization={Springer International Publishing}
