--- a/annexe/Annexe.tex
+++ b/annexe/Annexe.tex
@@ -21,9 +21,9 @@
       première correspond à l'annexe~\ref{ann:JFPC} et
       présente l'étude du cas discret du problème d'ordonnancement
       continu à contraintes énergétiques (article publié aux
-      Journées Francophones de la Programmation par
+      Journées Francophones de Programmation par
       Contraintes~\cite{Nattaf_JFPC}). Ce paragraphe présente
-      nottament un modèle de programmation par contraintes pour la
+      notamment un modèle de programmation par contraintes pour la
       restriction discrète du problème.
 
       La seconde annexe (ann.~\ref{ann:IESM}) porte sur la mise en place d'une
@@ -37,7 +37,7 @@
       modèles de programmation linéaire à événements sont introduits. Les deux
       premiers, constituant des méthodes de résolution exacte,
       comportent un nombre de variables et de contraintes trop
-      important pour expérer les résoudre en temps raisonnable. De ce
+      important pour espérer les résoudre en temps raisonnable. De ce
       fait, un troisième modèle simplifié est présenté et la solution
       de ce modèle est utilisée comme solution de base des modèles
       exacts.}   
