--- a/annexe/JFPC.tex
+++ b/annexe/JFPC.tex
@@ -102,7 +102,7 @@ valides déduites du raisonnement énergétique~\cite{Lopez1990}.
 Ces deux modèles sont ensuite testés sur des instances à données
 entières, avec et sans dilatation.
 
-\section{Modèle de programmation par contrainte}
+\section{Modèle de programmation par contraintes}
 
 Pour modéliser le DECSP à l'aide de la PPC, nous divisons chaque tâche
 $i$ en deux sous-tâches $i_{min}$ et $i_{preem}$. La première,
@@ -339,7 +339,7 @@ la même façon que~\eqref{both}.  Ces inégalités seront ajoutées au
 modèle indexé par le temps décrit à la section~\ref{MIP} pour
 renforcer ce dernier. 
  
-\section{Résultats Expérimentaux}
+\section{Résultats expérimentaux}
 
 Nous avons testé les différentes méthodes de résolution proposées dans
 cet article sur les instances de~\cite{Nattaf2015}. Les
