--- a/main_file.bib
+++ b/main_file.bib
@@ -15,7 +15,7 @@ author = "Robert M. Haralick and Gordon L. Elliott"
 @inproceedings{Gay2015,
   title={Time-table disjunctive reasoning for the cumulative constraint},
   author={Gay, Steven and Hartert, Renaud and Schaus, Pierre},
-  booktitle={International Conference on AI and OR Techniques in Constriant Programming for Combinatorial Optimization Problems},
+  booktitle={International Conference on AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems},
   pages={157--172},
   year={2015},
   organization={Springer International Publishing}
@@ -31,9 +31,9 @@ address = "Detroit, USA"
 
 @Article{TTLah,
     Author = {Abdelkader {Lahrichi}},
-    Title = {{Ordonnancements. La notion de ''parties obligatoires'' et son application aux probl\`emes cumulatifs.}},
+    Title = {{Ordonnancements. La notion de "parties obligatoires" et son application aux probl\`emes cumulatifs.}},
     FJournal = {{RAIRO. Recherche Op\'erationnelle}},
-    Journal = {{RAIRO, Rech. Op\'er.}},
+    Journal = {{RAIRO - Recherche Op\'erationnelle}},
     ISSN = {0399-0559},
     Volume = {16},
     Pages = {241--262},
@@ -86,7 +86,7 @@ url="http://dx.doi.org/10.1007/s10601-015-9192-z"
 }
 
 @book{ADN,
- author = {Artigues, Christian and Demassey, Sophie and Neron, Emmanuel},
+ author = {Artigues, Christian and Demassey, Sophie and N\'eron, Emmanuel},
  title = {Resource-Constrained Project Scheduling: Models, Algorithms, Extensions and Applications},
  year = {2007},
  isbn = {190520972X},
@@ -244,7 +244,7 @@ author = "Rainer Kolisch"
 @article{modele_RCPSP,
  author = {Kon{\'e}, Oumar and Artigues, Christian and Lopez, Pierre and Mongeau, Marcel},
  title = {Event-based {MILP M}odels for {R}esource-constrained {P}roject {S}cheduling {P}roblems},
- journal = {Comput. Oper. Res.},
+ journal = {Computers \& Operations Research},
  issue_date = {January, 2011},
  volume = {38},
  number = {1},
@@ -260,6 +260,43 @@ author = "Rainer Kolisch"
  address = {Oxford, UK, UK},
  keywords = {Mixed integer linear programming, Project management, Resource-constrained project scheduling},
 } 
+@inproceedings{Bonifas,
+  TITLE = {{A {$O(n^2{\,}\log{n})$} propagation for the Energy Reasoning}},
+  AUTHOR = {Bonifas, Nicolas},
+  BOOKTITLE = {{ROADEF - 17{\`e}me congr{\`e}s annuel de la Soci{\'e}t{\'e} fran{\c c}aise de recherche op{\'e}rationnelle et d'aide {\`a} la d{\'e}cision}},
+  ADDRESS = {Compi{\`e}gne, France},
+  ORGANIZATION = {{Soci{\'e}t{\'e} fran{\c c}aise de recherche op{\'e}rationnelle et d'aide {\`a} la d{\'e}cision}},
+  YEAR = {2016},
+  MONTH = Feb
+}
+@Inbook{Tesch2016,
+author="Tesch, Alexander",
+title="A Nearly Exact Propagation Algorithm for Energetic Reasoning in {$O(n^2{\,}\log{n})$}                 ",
+bookTitle="Principles and Practice of Constraint Programming: 22nd International Conference, CP 2016, Toulouse, France, September 5-9, 2016, Proceedings",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="493--519",
+isbn="978-3-319-44953-1",
+doi="10.1007/978-3-319-44953-1_32",
+url="http://dx.doi.org/10.1007/978-3-319-44953-1_32"
+}
+@Inbook{Berthold2011,
+author="Berthold, Timo
+and Heinz, Stefan
+and Schulz, Jens",
+title="An Approximative Criterion for the Potential of Energetic Reasoning",
+bookTitle="Theory and Practice of Algorithms in (Computer) Systems: First International ICST Conference, TAPAS 2011, Rome, Italy, April 18-20, 2011. Proceedings",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="229--239",
+isbn="978-3-642-19754-3",
+doi="10.1007/978-3-642-19754-3_23",
+url="http://dx.doi.org/10.1007/978-3-642-19754-3_23"
+}
+
+
 
 @phdthesis{theseOumar,
   TITLE = {{Nouvelles approches pour la r{\'e}solution du probl{\`e}me d'ordonnancement de projet {\`a} moyens limit{\'e}s}},
@@ -278,14 +315,14 @@ author = "Rainer Kolisch"
 
 @phdthesis{theseNuijten,
   TITLE = {Time and resource constrained scheduling: A constraint satisfaction approach.},
-  AUTHOR = {Wim, Nuijten},
+  AUTHOR = {Wim Nuijten},
   SCHOOL = {{Technische Universiteit Eindhoven}},
   YEAR = {1994}
 }
 
 @ARTICLE{PSPLIB,
     author = {Rainer Kolisch and Arno Sprecher},
-    title = {PSPLIB -- A project scheduling problem library},
+    title = {{PSPLIB} -- A project scheduling problem library},
     journal = {European Journal of Operational Research},
     year = {1996},
     volume = {96},
@@ -427,16 +464,16 @@ and Schaus, Pierre},
 
 
 @incollection{BP,
-  title={A continuous multi-resources cumulative constraint with positive-negative resource consumption-production},
+  title={A continuous multi-resource cumulative constraint with positive-negative resource consumption-production},
   author={Beldiceanu, Nicolas and Poder, Emmanuel},
-  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 4th International Conference, CPAIOR 2007 Brussels, Belguim, May 23-26. Proceedings},
+  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 4th International Conference, CPAIOR 2007 Brussels, Belgium, May 23-26. Proceedings},
   pages={214--228},
   year={2007},
   publisher={Springer Berlin Heidelberg}
 }
 
 @inproceedings{BC,
-  title={A New Multi-resource cumulatives Constraint with Negative Heights},
+  title={A New Multi-resource cumulative Constraint with Negative Heights},
   author={Beldiceanu, Nicolas
 and Carlsson, Mats},
   booktitle={Principles and Practice of Constraint Programming: 8th International Conference, CP 2002 Ithaca, NY, USA, September 9--13, 2002 Proceedings},
@@ -519,10 +556,9 @@ month={Aug},}
 @inproceedings{V11,
   title={Timetable Edge Finding Filtering Algorithm for Discrete Cumulative Resources},
   author={Vil{\'i}m, Petr},
-  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 8th International Conference, CPAIOR 2011, Berlin, Germany, May 23-27, 2011. Proceedings",
-year="2011},
+  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 8th International Conference, CPAIOR 2011, Berlin, Germany, May 23-27, 2011. Proceedings},
+year={2011},
   pages={230--245},
-  year={2011},
   organization={Springer International Publishing}
 }
 
@@ -561,7 +597,7 @@ number = "9",
 pages= "643--647"}
 
 @article{NK,
-title = "\{MIP\} models for resource-constrained project scheduling with flexible resource profiles ",
+title = "{MIP} models for resource-constrained project scheduling with flexible resource profiles ",
 journal = "European Journal of Operational Research ",
 volume = "239",
 number = "2",
@@ -695,8 +731,7 @@ year="2009",
 
 
 @inproceedings{DHP,
-  title={A Survey of Interval Capacity Consistency Tests for Time- and Resource-Constrained Scheduling",
-title="Project Scheduling: Recent Models, Algorithms and Applications},
+  title={A Survey of Interval Capacity Consistency Tests for Time- and Resource-Constrained Scheduling},
   author={Dorndorf, Ulrich
 and Huy, To{\`a}n Phan
 and Pesch, Erwin},
@@ -723,7 +758,7 @@ year="1999",
 @Article{BD,
 author="Baptiste, Philippe
 and Demassey, Sophie",
-title="Tight LP bounds for resource constrained project scheduling",
+title="Tight {LP} bounds for resource constrained project scheduling",
 journal="OR Spectrum",
 year="2004",
 volume="26",
@@ -737,7 +772,7 @@ url="http://dx.doi.org/10.1007/s00291-003-0155-1"
 
 
 @article{ABKKLM,
-title = {A note on \fg an event-based \{MILP\} models for resource-constrained project scheduling problems\fg},
+title = {A note on \og an event-based {MILP} models for resource-constrained project scheduling problems\fg},
 journal = {Computers \& Operations Research},
 volume = "40",
 number = "4",
@@ -757,7 +792,7 @@ keywords = "Event "
 @article{MMRB,
  author = {Mingozzi, Aristide and Maniezzo, Vittorio and Ricciardelli, Salvatore and Bianco, Lucio},
  title = {An Exact Algorithm for the Resource-Constrained Project Scheduling Problem Based on a New Mathematical Formulation},
- journal = {Manage. Sci.},
+ journal = {Management Sciences},
  issue_date = {May 1998},
  volume = {44},
  number = {5},
