--- a/main_file.tex
+++ b/main_file.tex
@@ -13,7 +13,7 @@
 \fancyhead[LO]{\rightmark}
 \fancyhead[RE]{\leftmark}
 }
-\makeindex
+
 \input{newcommand.tex}
  \parskip=7pt
  \setcounter{topnumber}{1}
@@ -24,7 +24,7 @@
 \title{\textbf{\large Ordonnancement sous contraintes d'énergie}}
 \author{Margaux NATTAF}
 \defencedate{18/10/2016}
-\lab{Laboratoire d'Analyse et d'Architecture des Système (LAAS)}
+\lab{Laboratoire d'Analyse et d'Architecture des Systèmes (LAAS)}
 
 
 \nboss{2}
@@ -46,9 +46,9 @@
 \makesomeone{judge}{5}{Philippe LABORIE}{Principal Scientist, IBM, Paris}{Examinateur}
 \makesomeone{judge}{6}{Pierre LOPEZ}{Directeur de recherche au CNRS, LAAS-CNRS}{Directeur
   de thèse} 
-\makesomeone{judge}{7}{Alain QUILLOT}{Professeur, Université Blaise Pascal, Clermont-Ferrand }{Examinateur}
-\makesomeone{judge}{8}{Claude-Guy QUIMPER}{Professeur associé,
-  Université de Laval, Québec, Canada}{Rapporteur}
+\makesomeone{judge}{7}{Alain QUILLIOT}{Professeur, Université Blaise Pascal, Clermont-Ferrand }{Examinateur}
+\makesomeone{judge}{8}{Claude-Guy QUIMPER}{Professeur agrégé,
+  Université Laval, Québec, Canada}{Rapporteur}
 
 % ============================================================
 % DOCUMENT
