--- a/newcommand.tex
+++ b/newcommand.tex
@@ -45,6 +45,9 @@
 \newcommandx{\bbLS}[3][1=i,2=t_1,3=t_2]{\underline{b}_{LS}(#1,#2,#3)}
 \newcommandx{\bbRS}[3][1=i,2=t_1,3=t_2]{\underline{b}_{RS}(#1,#2,#3)}
 \newcommandx{\bbCS}[3][1=i,2=t_1,3=t_2]{\underline{b}_{CS}(#1,#2,#3)}
+\newcommandx{\bbLSk}[4][1=i,2=k,3=t_1,4=t_2]{\underline{b}_{LS}(#1,#2,#3,#4)}
+\newcommandx{\bbRSk}[4][1=i,2=k,3=t_1,4=t_2]{\underline{b}_{RS}(#1,#2,#3,#4)}
+\newcommandx{\bbCSk}[4][1=i,2=k,3=t_1,4=t_2]{\underline{b}_{CS}(#1,#2,#3,#4)}
 
 \newcommandx{\Em}[1][1=2n]{\E\setminus\{#1\}}
 \newcommand\E{{\cal E}}
