--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -47,7 +47,7 @@
     ensuite utilisée pour définir des méthodes de résolution dans les
     parties suivantes de cette thèse. 
 
-    Les propriétés définies dans le paragraphe~\ref{sec:ppte_CECSP}
+    Les propriétés définies dans la sous-section~\ref{sec:ppte_CECSP}
     ont été publiées
     dans~\cite{Nattaf_ORSpectrum,Nattaf_Constraints,Nattaf_CPDP}.} 
     \vspace{0.5cm}
