--- a/part1/ordo.tex
+++ b/part1/ordo.tex
@@ -138,5 +138,5 @@ distingue par exemple:
 \item les objectifs liés à une énergie, un débit...
 \end{itemize}
 
-Deux exemples de problèmes d'ordonnancement sont présentés dans le
-paragraphe suivant: le \RCPSP~et le \CUSP.
+Deux exemples de problèmes d'ordonnancement sont présentés dans la
+sous-section suivante: le \RCPSP~et le \CUSP. 
