--- a/part1/ordo_nrj.tex
+++ b/part1/ordo_nrj.tex
@@ -1,7 +1,7 @@
 
 \section{L'ordonnancement sous contraintes énergétiques}
 \label{sec:ordo_nrj} 
-La modélisation présentée dans ce paragraphe repose sur le problème
+La modélisation présentée dans cette section repose sur le problème
 d'ordonnancement continu à contraintes
 énergétiques~\cite{ArtiguesLopez}, le \CECSP.
 
@@ -452,7 +452,7 @@ f_2(4)= 6 + 8 + 8 =22$.
 \end{figure}
 \end{ex}
 
-Le paragraphe suivant présente les différentes modélisations des
+La sous-section suivante présente les différentes modélisations des
 activités à profil variable présentes dans la
 littérature.
 
@@ -472,7 +472,7 @@ MRCPSP~\cite{PV}, cette modélisation peut amener à une mauvaise
 allocation de la ressource.
 
 Si nous reprenons l'exemple de la peinture d'un bateau,
-décrit au paragraphe~\ref{sec:limit_CUSP}, l'activité avait besoin de
+décrit à la sous-section~\ref{sec:limit_CUSP}, l'activité avait besoin de
 $3$ unités d'énergie pour s'exécuter. Dans le contexte du MRCPSP,
 seulement $3$ modes seraient décrits: $(3,1),\ (2,2)$ et $(1,3)$. Or,
 dans le second cas, on donne une unité de trop à l'activité et la
@@ -605,12 +605,12 @@ techniques déjà définies pour d'autres problèmes. Cependant, certaines
 techniques existantes peuvent être adaptées dans le cadre du
 \CECSP. Ces techniques seront présentées plus tard dans le manuscrit.
 
-Le paragraphe suivant présente des propriétés du \CECSP~qui seront 
+La section suivante présente des propriétés du \CECSP~qui seront 
 utilisées dans le cadre de sa résolution. 
 
 \subsection{Propriétés du \CECSP}
 \label{sec:ppte_CECSP}
-Dans ce paragraphe, nous allons commencer par présenter la preuve de
+Dans cette section, nous allons commencer par présenter la preuve de
 NP-complétude du \CECSP. Ce problème pouvant être vu comme une
 généralisation du \CUSP, nous utilisons ce problème pour montrer la
 difficulté du \CECSP. 
