--- a/part1/ordo_ressource.tex
+++ b/part1/ordo_ressource.tex
@@ -233,7 +233,7 @@ de chaque activité $i\in \A$ de telle sorte que:
 Le \RCPSP~est un problème qui a été prouvé NP-complet au sens
 fort~\cite{NP_RCPSP}. Ce problème a donc été très étudié dans la
 littérature, notamment pour trouver des méthodes efficaces pour sa
-résolution. Dans le paragraphe~\ref{sec:PLNE_ordo_res}, nous présentons des
+résolution. Dans la section~\ref{sec:PLNE_ordo_res}, nous présentons des
 modèles de programmation linéaire permettant de trouver la solution
 optimale à ce problème. 
 
@@ -362,7 +362,7 @@ suite du manuscrit.
   \end{figure}
 \end{ex}
 
-Dans le paragraphe~\ref{sec:cumu}, nous présenterons des
+Dans la section~\ref{sec:cumu}, nous présenterons des
 méthodes de résolution pour ce problème utilisant la programmation par
 contraintes. 
 
@@ -418,7 +418,7 @@ considérer des ressources continues peut permettre l'agrégation des
 raisonnements dédiés à ces problèmes. 
 
 La modélisation complète du problème considéré dans cette thèse est
-décrit dans le paragraphe suivant. Cette modélisation sera ensuite
+décrit dans la section suivante. Cette modélisation sera ensuite
 comparée aux extensions du \CUSP~et du \RCPSP, déjà existantes dans la
 littérature. 
 
