--- a/part2/CECSP/ER_filter.tex
+++ b/part2/CECSP/ER_filter.tex
@@ -1,13 +1,13 @@
 \section{Algorithme de filtrage du raisonnement énergétique}
 \label{sec:ER_CECSP}
 
-Le paragraphe ci-dessous décrit l'adaptation du raisonnement
+La section ci-dessous décrit l'adaptation du raisonnement
 énergétique, introduit dans~\cite{RELopez} pour la contrainte cumulative,
-et décrit dans le paragraphe~\ref{sec:cumu_propag}. Nous commençons,
+et décrit dans la sous-section~\ref{sec:cumu_propag}. Nous commençons,
 dans un premier temps, par décrire l'algorithme de vérification de ce
 raisonnement, puis nous présenterons les règles d'ajustements qui
 peuvent être mises en place pour filtrer les domaines des
-variables. Enfin, la dernière partie de ce paragraphe sera consacrée à
+variables. Enfin, la dernière partie de cette section sera consacrée à
 la caractérisation des intervalles d'intérêt pour l'algorithme de
 vérification et pour les règles d'ajustement.
 
@@ -714,10 +714,10 @@ utilisée, i.e. $f_i(b)=3b+1 \text{ si } b \in ]2,3]$.
 \end{figure}
 \end{ex}
 
-\subsection{Les ajustements de borne}
+\subsection{Les ajustements de bornes}
 \label{sec:adjustment_tw}
 
-Dans ce paragraphe, nous décrivons les ajustements qui peuvent être
+Dans cette sous-section, nous décrivons les ajustements qui peuvent être
 faits sur les fenêtres de temps des activités. Tout d'abord, nous
 introduisons les notations suivantes: $\bbLS$ (respectivement $\bbRS$
 et $\bbCS$) correspond à la quantité de ressource consommée par
@@ -960,8 +960,8 @@ Nous avons montré qu'il était possible de calculer, étant donné un
 intervalle et une activité, sa consommation minimale et les
 ajustements pouvant être faits sur ses fenêtres de temps en
 $O(1)$. {\'E}tant donné un intervalle, la fonction de marge ainsi que
-tous les ajustements peuvent donc être calculés en $O(n)$. Dans le
-paragraphe suivant, nous montrons qu'il suffit d'exécuter l'algorithme
+tous les ajustements peuvent donc être calculés en $O(n)$. Dans la
+sous-section suivante, nous montrons qu'il suffit d'exécuter l'algorithme
 de vérification, ainsi que les ajustements sur un nombre polynomial
 d'intervalles $[t_1,t_2[$.
 
@@ -1887,7 +1887,7 @@ ce même résultat dans le cadre des ajustements de fenêtres de temps.
  fonction de marge est minimale. Comme, en pratique, il est difficile
  de trouver le minimum global d'une telle fonction, nous nous
  intéressons à ces minima locaux. Grâce au test de la dérivée
- seconde (voir paragraphe~\ref{sec:nrj_CUSP}), nous pouvons dériver
+ seconde (voir sous-section~\ref{sec:nrj_CUSP}), nous pouvons dériver
  des conditions selon lesquels $SL$ est localement minimale.
 
 \begin{lemma}[\cite{DP}]
