--- a/part2/CECSP/PPC_CECSP.tex
+++ b/part2/CECSP/PPC_CECSP.tex
@@ -2,8 +2,8 @@
 \CECSP}
 \label{sec:PPC_CECSP}
 Dans ce chapitre, nous décrivons des algorithmes et modèles issus de
-la programmation par contraintes. Les deux premiers paragraphes sont
-dédiés à la présentation d'algorithmes de filtrage pour le problème
+la programmation par contraintes. Les deux sections suivantes sont
+dédiées à la présentation d'algorithmes de filtrage pour le problème
 de décision du \CECSP. En effet, comme dans le cas du \CUSP, la
 NP-complétude de ce problème implique qu'un algorithme assurant la
 cohérence des bornes de chaque variable -- garantissant l'existence
@@ -13,7 +13,7 @@ polynomial. Par conséquent, plusieurs relaxations sont proposées afin
 de supprimer les valeurs possibles de début et fin de tâches
 incohérentes en temps polynomial.
 
-Le paragraphe~\ref{sec:time_CECSP} est dédié aux extensions pour le
+La section~\ref{sec:time_CECSP} est dédiée aux extensions pour le
 \CECSP~des raisonnements pour le \CUSP~basés sur le Time-Table (voir
 chapitre précédent). Dans un premier temps, nous montrons qu'une
 partie des raisonnements pour le \CUSP~s'adapte directement au cas du
@@ -38,7 +38,7 @@ Dans un second temps (\ref{sec:TTFlot_CECSP}, nous présenterons un nouveau
 raisonnement étendu, couplant Time-Table et problème de flots. 
 
 Enfin, une adaptation complète du raisonnement énergétique est décrit
-dans le paragraphe~\ref{sec:ER_CECSP}.
+dans la section~\ref{sec:ER_CECSP}.
 
 % Le dernier paragraphe sera quant à lui consacré à la présentation d'un
 % modèle de programmation par contraintes permettant de résoudre le
