--- a/part2/CuSP/PPC.tex
+++ b/part2/CuSP/PPC.tex
@@ -1,6 +1,6 @@
 \section{La programmation par contraintes}
 \label{sec:PPC}
-Ce paragraphe s'intéresse à la présentation des concepts de base de la
+Cette section s'intéresse à la présentation des concepts de base de la
 programmation par contraintes (PPC). La programmation par contraintes
 vise à résoudre des problèmes de satisfaction de contraintes (CSP)
 mais aussi des problèmes d'optimisation (ce dernier cas ne sera pas
@@ -10,7 +10,7 @@ solution tend à trouver une affectation des variables satisfaisant
 toutes les contraintes de ce réseau. Une présentation formelle des
 problèmes de satisfaction de contraintes ainsi qu'un aperçu de
 quelques méthodes permettant leur résolution sont présentés dans les
-paragraphes suivants. 
+sous-sections suivantes. 
 
 \subsection{Problème de satisfaction de contraintes}
 
@@ -90,8 +90,8 @@ lui assigne une valeur de son domaine. Pour trouver une telle
 instanciation, un certain nombre de techniques ont été mises en
 place. Ces techniques reposent principalement sur deux éléments
 centraux: le filtrage des domaines et l'exploration de l'espace de
-recherche. Ces deux concepts sont donc décrits dans les paragraphes
-suivants. 
+recherche. Ces deux concepts sont donc décrits dans les sous-sections 
+suivantes. 
 
 
 
@@ -277,7 +277,7 @@ solution. Comme il n'est pas concevable, en pratique, de devoir
 explorer un tel espace, des techniques permettant de réduire l'arbre
 de recherche ont donc été mises en place. Les techniques les plus
 célèbres permettant une telle réduction sont les algorithmes de
-filtrage. Ces algorithmes sont décrits dans le paragraphe suivante.
+filtrage. Ces algorithmes sont décrits dans la sous-section suivante.
 
 \subsection{Détection d'incohérence et Filtrage}
 \label{sec:PPC_propag}
@@ -471,6 +471,6 @@ solution, ce qui ne peut être fait en temps raisonnable puisque le
 problème est NP-complet.  Dans ce cas, il devient crucial de mettre
 en place des algorithmes qui s'exécutent en temps raisonnable mais qui
 n'assure pas un filtrage complet du domaine des variables. De tels
-algorithmes seront présentés dans le paragraphe~\ref{sec:cumu_propag}
-dans le but de résoudre le \CUSP. Le paragraphe suivant est quant à
-lui dédié à la modélisation des problèmes d'ordonnancement en PPC.
+algorithmes seront présentés dans la sous-section~\ref{sec:cumu_propag}
+dans le but de résoudre le \CUSP. La section suivante est quant à
+elle dédiée à la modélisation des problèmes d'ordonnancement en PPC.
