--- a/part2/CuSP/conclusion2.tex
+++ b/part2/CuSP/conclusion2.tex
@@ -22,12 +22,11 @@ disjonctif. Ces raisonnements sont parmi les moins forts pour le
 algorithmes très utilisés en pratique. 
 
 Le paragraphe suivant a présenté les règles de filtrage 
-énergétiques. Parmi elles, sont mentionnées le raisonnement
+énergétiques. Parmi elles, sont mentionnés le raisonnement
 Edge-Finding, les activités élastiques et le raisonnement énergétique
 qui est présenté en détail. Ce dernier est, à ce jour, un des
-raisonnements les plus forts pour le \CUSP. Cependant, la complexité
-élevée de ce dernier fait de lui un des algorithmes les moins utilisés 
-en pratique.
+raisonnements les plus forts pour le \CUSP. Cependant, sa complexité
+élevée fait de lui un des algorithmes les moins utilisés en pratique.
 
 Enfin, le dernier paragraphe explique comment certains auteurs ont
 étendu ou couplé des règles de filtrage existantes pour définir de
