--- a/part2/PPC.tex
+++ b/part2/PPC.tex
@@ -23,7 +23,7 @@
       des problèmes d'ordonnancement en PPC. 
 
       La fin du chapitre~\ref{sec:PPC_CUSP} présente la contrainte
-      cumulative et quelques uns des principaux algorithmes de filtrage décrits
+      cumulative et quelques-uns des principaux algorithmes de filtrage décrits
       pour cette contrainte. Pour ces algorithmes de filtrage, nous
       distinguons trois grands types de raisonnements: les
       raisonnements simples, ceux utilisant le concept d'énergie et
@@ -43,8 +43,8 @@
       basé sur le Time-Table et couplé avec un modèle de flots est
       aussi présenté~\cite{Nattaf_CPDP}.
 
-      Le dernier paragraphe du chapitre~\ref{sec:PPC_CECSP} est
-      consacré à l'adaptation d'un des raisonnements les plus forts définis pour la
+      La dernière section du chapitre~\ref{sec:PPC_CECSP} est
+      consacrée à l'adaptation d'un des raisonnements les plus forts définis pour la
       contrainte cumulative: le raisonnement énergétique. Pour ce
       raisonnement, nous montrons comment adapter les calculs de
       consommation minimale dans le cadre du \CECSP~ et qu'il existe
