--- a/part2/conclusion.tex
+++ b/part2/conclusion.tex
@@ -5,7 +5,7 @@ principales notions sur lesquelles reposent ce paradigme. De plus, une
 description des principales techniques de modélisation des problèmes
 d'ordonnancement à été donnée. 
 
-Ces deux paragraphes introductifs nous ont ensuite permis de décrire
+Ces deux sous-sections introductives nous ont ensuite permis de décrire
 un problème d'ordonnancement particulier, le problème cumulatif. Pour
 ce problème, un grand nombre d'algorithmes de vérification et de
 filtrage ont été présentés. Ces algorithmes se classent en trois
@@ -22,7 +22,7 @@ permettant de caractériser les intervalles d'intérêt du raisonnement
 énergétique pour la contrainte cumulative est présentée.
 
 Les raisonnements présentés pour la contrainte cumulative sont ensuite
-adapté dans le cas du \CECSP. Le premier raisonnement que nous avons
+adaptés dans le cas du \CECSP. Le premier raisonnement que nous avons
 adapté au \CECSP~est le raisonnement énergétique. En effet,
 l'adaptation d'un raisonnement pour la contrainte cumulative dans le
 cas du \CECSP~est généralement beaucoup moins fort. De ce fait, nous
@@ -38,11 +38,11 @@ des activités.
 
 D'autres adaptations des raisonnements cumulatifs sont aussi
 détaillés. Ces raisonnements s'adaptent aisément au cas du \CECSP. Ils
-restent cependant beaucoup moins puissants en terme de déduction que
+restent cependant beaucoup moins puissants en termes de déduction que
 leurs homologues cumulatifs. De ce fait, un nouvel algorithme de
 vérification couplant un programme linéaire adapté d'un problème de
 flot et le raisonnement Time-Table est présenté. Ce raisonnement
-n'étant pas dominé par le raisonnement énergétique peut être couplé
+n'étant pas dominé par le raisonnement énergétique, il peut être couplé
 avec ce dernier afin de déduire plus d'incohérence. Il peut aussi être
 couplé avec des algorithmes de filtrage tels que celui du raisonnement
 disjonctif ou du Time-Table. 
