--- a/part3/CECSP/modele_CECSP.tex
+++ b/part3/CECSP/modele_CECSP.tex
@@ -18,10 +18,10 @@ ni leur date de fin, ni leur consommation totale de ressource, tout modèle
 ayant un objectif impliquant seulement la minimisation de ces trois
 quantités sera valide pour le \CECSP.
 
-Dans ce paragraphe, nous commençons par décrire un modèle indexé par
+Dans cette section, nous commençons par décrire un modèle indexé par
 le temps, puis, nous présentons deux modèles à événements. Ces trois
-modèles sont adaptés des modèles pour le \RCPSP~présentés dans le
-paragraphe~\ref{sec:PLNE_ordo_res} et sont présentés
+modèles sont adaptés des modèles pour le \RCPSP~présentés dans la
+section~\ref{sec:PLNE_ordo_res} et sont présentés
 dans~\cite{Nattaf_ORSpectrum}.   
 
 
@@ -96,7 +96,7 @@ fine pour les variables, i.e. $[\ES,\LS]$ pour $x_{it}$ au lieu de
 $[\ES,\LE-1]$ et $[\EE,\LE]$ pour $y_{it}$ au lieu de
 $[\ES-1,\LE]$. Ces fenêtres de temps pouvant être raffinées à l'aide
 d'heuristiques, de la programmation par contraintes (cf.
-paragraphe~\ref{sec:adjustment_tw}) ou par le biais d'autres méthodes,
+sous-section~\ref{sec:adjustment_tw}) ou par le biais d'autres méthodes,
 ces modifications peuvent grandement améliorer les performances du
 modèle.
 
@@ -277,10 +277,10 @@ $P=\max_{i\in A}|\P_i|$.
 
 \subsection{Modèles à événements}
 
-Dans ce paragraphe, nous proposons deux formulations à événements pour
+Dans cette sous-section, nous proposons deux formulations à événements pour
 le \CECSP. Ces deux formulations sont grandement inspirées des
-formulations start/end et on/off du \RCPSP, présentées dans le
-paragraphe~\ref{sec:PLNE_ordo_res} et issues
+formulations start/end et on/off du \RCPSP, présentées dans la
+section~\ref{sec:PLNE_ordo_res} et issues 
 de~\cite{modele_RCPSP}. Comme dans le cas du \RCPSP, ces modèles se
 justifient par leur nombres polynomial de variables et de contraintes
 qui peut s'avérer très pertinent dans la cas de grands horizons de
