--- a/part3/PLNE.tex
+++ b/part3/PLNE.tex
@@ -23,13 +23,13 @@
       nombres entiers, les concepts généraux qu'elles utilisent sont
       décrits dans le chapitre~\ref{sec:PLNE_RCPSP}. Ces techniques sont
       ensuite présentées dans le cadre d'un célèbre problème
-      d'ordonnacement: le RCPSP. 
+      d'ordonnancement: le RCPSP. 
 
       Pour ce problème, trois modèles sont présentés. Le premier est
       un modèle indexé par le temps et fait partie des classes de modèles
       les plus performants pour la résolution des instances de la
       PSPLIB~\cite{PSPLIB} pour le \RCPSP. Cependant, ces modèles ont leurs
-      limitations puisqu'entre autre, leur taille dépent directement de
+      limitations puisqu'entre autres, leur taille dépent directement de
       l'horizon de temps du projet. Pour des planifications à long terme,
       d'autres modèles plus performants sont introduits: les modèles à
       événements. Ils ont l'avantage d'avoir un nombre polynomial de
@@ -38,7 +38,7 @@
       beaucoup moins fortes que celles des modèles indexés par le temps,
       ce qui les rend non compétitifs dans le cas d'instances ayant un
       petit horizon de temps. Ces modèles dans le cadre du \RCPSP~ont été
-      introduit par Kone et al.~\cite{modele_RCPSP}.
+      introduits par Koné et al.~\cite{modele_RCPSP}.
 
       Dans le chapitre~\ref{sec:PLNE_CECSP}, nous présentons
       l'adaptation de ces modèles dans le cadre du \CECSP. Ces modèles
@@ -56,7 +56,7 @@
       entre deux événements, d'autres permettant de borner la date des
       événements ou des inégalités dérivées du problème du
       sac-à-dos. De plus, des coupes appelées inégalités de
-      non-préemption sont définies et une étude polyhédrale de
+      non-préemption sont définies et une étude polyédrale de
       l'ensemble des vecteurs binaires solution d'un des modèles
       présenté est détaillée. Ces résultats ont été présentés 
       dans~\cite{Nattaf_ROADEF16,Nattaf_ECCO16}. }
