--- a/part3/RCPSP/PL.tex
+++ b/part3/RCPSP/PL.tex
@@ -2,7 +2,7 @@
 
 \section{La programmation linéaire en nombres entiers}
 \label{sec:PLNE}
-Dans ce paragraphe, nous présentons les concepts de base de la
+Dans cette section, nous présentons les concepts de base de la
 programmation linéaire ainsi que les notions et outils qui seront
 utilisés dans la suite de cette partie. Cette présentation n'étant que
 partielle, nous renvoyons le lecteur à~\cite{LP} pour une description
