--- a/part3/RCPSP/conclusion.tex
+++ b/part3/RCPSP/conclusion.tex
@@ -17,9 +17,9 @@ associés augmente et leurs performances décroissent. Pour pallier ce
 problème, un autre type de modèle est mis en place: les modèles à
 événements. L'avantage de ces modèles est leur taille, polynomiale en
 fonction de la taille de l'instance et surtout indépendante de
-l'horizon de temps. Dans~\cite{modele_RCPSP}, Kone {\it et al.}
+l'horizon de temps. Dans~\cite{modele_RCPSP}, Koné {\it et al.}
 comparent les performances de ces modèles avec ceux indexés par le
-temps sur des instances ayant de grand horizon de temps. De plus, ces
+temps sur des instances ayant de grands horizons de temps. De plus, ces
 modèles permettent la modélisation de problèmes continus. De ce fait,
 nous allons adapter ces modèles dans le cadre du \CECSP~dans le
 chapitre suivant. De plus, un modèle indexé par le temps est aussi
