--- a/part3/RCPSP/modele_RCPSP.tex
+++ b/part3/RCPSP/modele_RCPSP.tex
@@ -7,7 +7,7 @@ La facilité de modélisation des problèmes d'ordonnancement sous
 contraintes de ressources à l'aide de la programmation linéaire en a
 fait une des principales méthodes de résolution pour ces derniers. De
 ce fait, de nombreuses techniques de modélisation ont été développées
-et la littérature sur ce sujet est très vaste. Dans ce paragraphe,
+et la littérature sur ce sujet est très vaste. Dans cette section,
 nous nous intéressons principalement aux modèles développés pour le
 problème d'ordonnancement de projet sous contraintes de ressources, le
 \RCPSP. Ces modèles sont regroupés en plusieurs familles:
@@ -27,7 +27,7 @@ variables, moins élevé que  les formulations à temps
 discret~\cite{modele_RCPSP}.
 \end{itemize}
 
-Dans ce paragraphe, nous présentons quelques modèles de
+Dans cette section, nous présentons quelques modèles de
 programmation linéaire en nombres entiers ou mixte développés pour les
 problèmes d'ordonnancement sous contraintes de ressources. Nous nous
 intéressons particulièrement aux modèles décrits
@@ -143,7 +143,7 @@ trouvée dans~\cite{ADN}.
 \label{sec:event_RCPSP}
 
 Nous allons présenter deux formulations à événements: une formulation
-dite start/end et une formulation dite on/off.  Ce paragraphe montre,
+dite start/end et une formulation dite on/off.  Cette sous-section montre,
 dans un premier temps, l'intérêt de l'utilisation des modèles à
 événements à la place des modèles à temps discret, en comparant
 notamment leur nombre respectif de variables et de contraintes.
