--- a/part4/conclusion.tex
+++ b/part4/conclusion.tex
@@ -23,21 +23,21 @@ place d'un algorithme de séparation permettant d'ajouter seulement une
 partie de ces inégalités à chaque n\oe ud de l'arbre de branchement est
 donc une piste de recherche intéressante. 
 
-Le paragraphe suivant détaille les résultats obtenus par les modèles à
-événement. Nous avons présenté, dans un premier temps, un algorithme
-polynomial utilisé pour séparer les inégalités de non-préemption définies dans le
-paragraphe~\ref{sec:nonPreem}. Ensuite, les résultats obtenus par le
-modèle Start/End pour résoudre le \CECSP~sont détaillés. Ce dernier,
-bien qu'il ait de meilleure relaxation que le modèle On/Off,
-ne permet pas de résoudre autant d'instances car il comprend deux fois
-plus de variables binaires.
+La sous-section suivante détaille les résultats obtenus par les modèles à
+événements. Nous avons présenté, dans un premier temps, un algorithme
+polynomial utilisé pour séparer les inégalités de non-préemption
+définies dans la sous-section~\ref{sec:nonPreem}. Ensuite, les
+résultats obtenus par le modèle Start/End pour résoudre le \CECSP~sont
+détaillés. Ce dernier, bien qu'il ait de meilleures relaxations que le
+modèle On/Off, ne permet pas de résoudre autant d'instances car il
+comprend deux fois plus de variables binaires.
 
 Les expérimentations conduites sur le modèle On/Off pour résoudre le
 \CECSP~ont permis de valider les ensembles d'inégalités et de coupes
-définies dans le paragraphe~\ref{sec:amelioration_modele}. En effet,
+définies dans la section~\ref{sec:amelioration_modele}. En effet,
 plusieurs sous-ensembles de ces inégalités ont successivement été
 ajoutées au modèle et une comparaison des résultats a été effectuée,
-montrant que les meilleures performances étaient obtenus quand ces
+montrant que les meilleures performances étaient obtenues quand ces
 inégalités étaient ajoutées au modèle. De plus, l'intérêt de l'ajout
 d'une partie de ces inégalités dans le cadre de la résolution du
 \RCPSP~a aussi été démontré.
@@ -50,17 +50,17 @@ de résolution exacte pour le \CECSP. De plus, cette comparaison a
 de nouveau permis de montrer que les résultats obtenus avec le modèle
 On/Off était meilleurs que ceux obtenus par le modèle Start/End. 
 
-Le paragraphe suivant a été consacré aux résultats obtenus par les
+La section suivante a été consacré aux résultats obtenus par les
 algorithmes de filtrage pour le \CECSP. Ces derniers sont inclus dans
 une méthode de branchement hybride, couplant règle de branchement et
-modèle On/Off. Les expérimentations conduites ont
-permis de montrer que cet algorithme obtenait de meilleurs résultats
-que le modèle On/Off seul. De plus, l'intérêt et la complémentarité de l'algorithme du
-raisonnement énergétique et celui de l'algorithme de vérification basé sur
-les flots présentés dans le chapitre~\ref{sec:PLNE_CECSP} ont été montrés. En effet,
-pour certaines familles d'instances l'algorithme de flot obtient de
-meilleurs résultats et, pour d'autres familles, c'est le raisonnement
-énergétique qui les obtient. 
+modèle On/Off. Les expérimentations conduites ont permis de montrer
+que cet algorithme obtenait de meilleurs résultats que le modèle
+On/Off seul. De plus, l'intérêt et la complémentarité de l'algorithme
+du raisonnement énergétique et celui de l'algorithme de vérification
+basé sur les flots présentés dans le chapitre~\ref{sec:PLNE_CECSP} ont
+été montrés. En effet, pour certaines familles d'instances
+l'algorithme de flot obtient de meilleurs résultats et, pour d'autres
+familles, c'est le raisonnement énergétique qui les obtient.
 
 Enfin, cette partie a comparé les deux algorithmes de
 filtrage sur des instances comportant des fonctions de rendement
