--- a/part4/expe.tex
+++ b/part4/expe.tex
@@ -21,22 +21,21 @@
       utilisés. 
 
       La suite de cette partie est ensuite consacrée à la présentation
-      des résultats des méthodes décrites dans le
-      chapitre~\ref{sec:PLNE_CECSP} et issues de la programmation linéaire
-      mixte. Le modèle indexé par le temps pour le \CECSP~est comparé
-      à ce même modèle auquel on a ajouté les inégalités déduites du
-      raisonnement énergétique et présentées dans le
-      paragraphe~\ref{sec:ER_TI}. Pour les modèles à événements, nous
-      commençons par détailler l'algorithme utilisé pour séparer les
-      inégalités de non-préemption (voir
-      paragraphe~\ref{sec:nonPreem}). Les modèles sont ensuite comparés
-      entre eux et l'ajout des inégalités et coupes décrites dans le
-      paragraphe~\ref{sec:amelioration_OO} au modèle On/Off dans le cas du
-      \CECSP~et du \RCPSP~est discuté. La dernière partie du paragraphe
-      traitant de la programmation linéaire est consacrée à la comparaison
-      des trois modèles.
+des résultats des méthodes décrites dans le
+chapitre~\ref{sec:PLNE_CECSP} et issues de la programmation linéaire
+mixte. Le modèle indexé par le temps pour le \CECSP~est comparé à ce
+même modèle auquel on a ajouté les inégalités déduites du raisonnement
+énergétique et présentées dans la sous-section~\ref{sec:ER_TI}. Pour
+les modèles à événements, nous commençons par détailler l'algorithme
+utilisé pour séparer les inégalités de non préemption (voir
+sous-section~\ref{sec:nonPreem}). Les modèles sont ensuite comparés
+entre eux et l'ajout des inégalités et coupes décrites dans la
+sous-section~\ref{sec:amelioration_OO} au modèle On/Off dans le cas du
+\CECSP~et du \RCPSP~est discuté. La dernière partie de la section 
+traitant de la programmation linéaire est consacrée à la comparaison
+des trois modèles.
 
-      Le dernier paragraphe concerne les résultats des méthodes issues de
+      La dernière section concerne les résultats des méthodes issues de
       la programmation par contraintes présentées dans le
       chapitre~\ref{sec:PPC_CECSP}. Dans un premier temps, nous
       décrivons le cadre dans lequel ces expérimentations ont été
@@ -69,11 +68,11 @@ jeux d'instances utilisés ainsi que certaines méthodes de
 prétraitement qui sont appliquées à ces instances avant leur
 résolution. 
 
-Le paragraphe suivant sera quant à lui dédié aux résultats de la
+La section suivante sera quant à elle dédiée aux résultats de la
 programmation linéaire mixte et en nombres entiers. Nous présenterons
 les performances des différents modèles présentés dans le
 chapitre~\ref{sec:PLNE_CECSP} ainsi que l'impact des améliorations
-proposées dans le paragraphe~\ref{sec:amelioration_modele} de ce même
+proposées dans la section~\ref{sec:amelioration_modele} de ce même
 chapitre. 
 
 Le dernier paragraphe sera consacré à la présentation des performances
