--- a/conclu.tex
+++ b/conclu.tex
@@ -2,12 +2,12 @@
 
 Beaucoup de problèmes d'ordonnancement cumulatifs définis dans la
 littérature souffrent d'une limitation imposant que chaque activité
-aille une durée et une consommation de ressource fixe durant son 
+ait une durée et une consommation de ressource fixes durant son 
 exécution. Il arrive cependant, dans de nombreux cas pratiques, que
 cette limitation empêche la modélisation correcte du problème. De ce
 fait, de nouveaux problèmes permettant de modéliser la malléabilité
 des activités, i.e. ayant une durée et une consommation de ressource
-variable, ont été introduits~\cite{DDH,NK,FT,Kis,BLN}. Cette thèse
+variables, ont été introduits~\cite{DDH,NK,FT,Kis,BLN}. Cette thèse
 introduit un nouveau problème appartenant à cette classe, le \CECSP. 
 Une comparaison des différents problèmes existant permettant de
 modéliser des activités malléables a été réalisée et a permis de
@@ -16,16 +16,16 @@ montrer que le \CECSP~est très différents de ces derniers.
 La principale difficulté du \CECSP~repose sur la combinaison entre
 ressource continue et malléabilité des activités. En effet, ces deux
 caractéristiques impliquent que les activités peuvent prendre des
-formes quasi quelconques. De ce fait, un des premiers travail effectué
-dans cette thèse a été une étude détaillée du problème. Cette étude a
-permis de décrire des cas particuliers du \CECSP~pouvant être résolus
-en temps polynomial mais aussi a permis, dans certains cas, la mise en
-place d'une propriété permettant de simplifier le problème en
-caractérisant les différentes formes que peut prendre une activité. 
-Cette simplification du problème a ensuite été utilisée pour mettre en
-place des méthodes de résolution pour le \CECSP, souvent adaptées de
-méthodes existantes dans le cadre des problèmes d'ordonnancement
-cumulatifs. 
+formes quasi quelconques. De ce fait, un des premiers travaux
+effectués dans cette thèse a été une étude détaillée du
+problème. Cette étude a permis de décrire des cas particuliers du
+\CECSP~pouvant être résolus en temps polynomial mais aussi a permis,
+dans certains cas, la mise en place d'une propriété permettant de
+simplifier le problème en caractérisant les différentes formes que
+peut prendre une activité.  Cette simplification du problème a ensuite
+été utilisée pour mettre en place des méthodes de résolution pour le
+\CECSP, souvent adaptées de méthodes existantes dans le cadre des
+problèmes d'ordonnancement cumulatifs.
 
 Les méthodes de résolution dédiées au \CECSP~et proposées dans ce
 manuscrit sont regroupées en deux catégories: les méthodes issues de
@@ -64,8 +64,8 @@ et les deux autres sur des formulations basées sur les événements. Ces
 dernières ont montré leur efficacité dans le cas où l'horizon de temps
 des modèles devient très grand. De plus, contrairement aux
 formulations 
-indexés par le temps, elles permettent de modéliser des dates de début
-et de fin d'activités continue. De ce fait, nous avons adapté ces
+indexées par le temps, elles permettent de modéliser des dates de début
+et de fin d'activités continues. De ce fait, nous avons adapté ces
 modèles au cas du \CECSP. Un modèle indexé par le temps est aussi
 détaillé. En effet, ces modèles ont prouvé leur efficacité dans le
 cadre du \RCPSP.
@@ -78,7 +78,7 @@ derniers. Des inégalités directement déduites du raisonnement
 des relaxations linéaires des deux modèles présentés est
 effectuée. Des inégalités permettant de renforcer le modèle ayant les
 moins bonnes relaxations, le modèle On/Off, sont présentées. Ces
-inégalités, appelées inégalités de non-préemption, ont été montrées 
+inégalités, appelées inégalités de non préemption, ont été montrées 
 comme appartenant à l'enveloppe convexe du polyèdre formé par
 l’ensemble de toutes les affectations possibles pour les variables
 binaires correspondant à une seule activité. Enfin, plusieurs autres
@@ -101,10 +101,10 @@ présentés dans ce manuscrit, on trouve:
   modéliser certains problèmes réels. Dans un premier temps, la
   considération de fonctions de rendement convexes est une
   continuation naturelle de ce travail. Cependant, ce n'est toujours
-  pas suffisant dans certains cas. En effet, beaucoup de fonctions 
-  de rendement ne sont ni totalement concave, ni totalement convexe
-  mais sont convexes sur certains intervalles et concaves sur les
-  autres intervalles. 
+pas suffisant dans certains cas. En effet, beaucoup de fonctions de
+rendement ne sont ni totalement concaves, ni totalement convexes mais
+sont convexes sur certains intervalles et concaves sur les autres
+intervalles.
 
 \paragraph{La mise en place d'algorithmes de filtrage plus
   performants.} Qu'il s'agisse d'algorithmes plus performants en termes
