--- a/part3/RCPSP/PLNE_RCPSP.tex
+++ b/part3/RCPSP/PLNE_RCPSP.tex
@@ -3,7 +3,7 @@
 \label{sec:PLNE_RCPSP}
 \input{part3/RCPSP/PL.tex}
 
-Le paragraphe suivant est dédié aux modèles de programmation linéaire
+La sous-section suivante est dédiée aux modèles de programmation linéaire
 mis en place pour le problème d'ordonnancement de projet sous
 contraintes de ressource. 
 
